[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lumary"
version = "0.1.1"
description = "基于 FastAPI 封装的生产级 Web 应用框架"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "zarkhan", email = "hanguangzheng@qq.com" },
]
keywords = ["fastapi", "web", "framework", "lumary", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.136.0",
]

[project.optional-dependencies]
sqlalchemy = [
    "sqlalchemy>=2.0.0",
    "python-ulid>=3.0.0"
]

standard = [
    "pydantic-settings>=2.14.0",
    "uvicorn[standard]>=0.30.0",
    "python-ulid>=3.1.0",
    "sqlalchemy[asyncio]>=2.0.0"
]

dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "build>=1.2",
    "asyncpg>=0.29.0"
]

[project.urls]
Homepage = "https://github.com/zarkhan/lumary"
Repository = "https://github.com/zarkhan/lumary"
Documentation = "https://github.com/zarkhan/lumary#readme"

[tool.setuptools.packages.find]
include = ["lumary*"]

[tool.setuptools.package-data]
lumary = ["py.typed"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
