[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lumary"
dynamic = ["version"]
description = "基于 FastAPI 封装的生产级 Web 应用框架"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "zarkhan", email = "hanguangzheng@qq.com" },
]
keywords = ["fastapi", "web", "framework", "lumary", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.48.0",
]

[project.optional-dependencies]
sqlalchemy = [
    "sqlalchemy[asyncio]>=2.0.0",
    "python-ulid>=3.0.0"
]

standard = [
    "sqlalchemy[asyncio]>=2.0.0",
    "python-ulid>=3.1.0",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.32",
    "redis>=5.0.0",
    "aiomqtt>=2.0.0"
]

redis = [
    "redis>=5.0.0"
]

mqtt = [
    "aiomqtt>=2.0.0"
]

[dependency-groups]
dev = [
    "sqlalchemy[asyncio]>=2.0.0",
    "python-ulid>=3.1.0",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.32",
    "pytest>=9.1.0",
    "httpx2>=2.4.0",
    "coverage[toml]>=6.0.0",
    "anyio>=4.14.0",
    "pytest-asyncio>=1.4.0",
    "pytest-tornasync>=0.6.0.post2",
    "pytest-trio>=0.8.0",
    "pytest-twisted>=1.14.3",
    "twisted>=26.4.0",
    "aiosqlite>=0.22.1",
]

[project.urls]
Homepage = "https://github.com/zarkhan/pkg_lumary"
Repository = "https://github.com/zarkhan/pkg_lumary"
Documentation = "https://github.com/zarkhan/pkg_lumary#readme"

[tool.setuptools.packages.find]
include = ["lumary*"]

[tool.setuptools.package-data]
lumary = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "lumary.__version__.__version__"}

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
